--- a/style.css
+++ b/style.css
@@ -67,7 +67,9 @@ body {
 
 @keyframes explode {
   0% { transform: scale(0); opacity: 0; }
+  25% {transform: scale(1); opacity: .5}
   50% { transform: scale(2); opacity: 1; }
+  75% { transform: scale(1); opacity: .5 }
   100% { transform: scale(0); opacity: 0; }
 }
 
